# health-kiosk

./: README.md  Siglip_finetune_and_heatmap.ipynb  analyse_conditons.ipynb  baseline_eval.ipynb  create_input_metadata_file.ipynb  gen_commit.sh  grpo_qwen_0_5b_single_t4.ipynb  icd_code_processing.ipynb  medsiglip_fine_tune_for_image_classification.ipynb  pyproject.toml  scin_finetune.ipynb  siglip_finetune_heatmap_notebook.ipynb  synth_image_generator.ipynb  tensorboard_experiments.ipynb  test_layered_loss.ipynb  test_medsiglip.ipynb  train_siglip_fine_grained.ipynb  train_siglip_fine_grained_lora.ipynb  train_siglip_lora_with_scin.ipynb
notebooks/: fine_tune_for_image_classification.ipynb  scin_finetune.ipynb  siglip_fine_tune_for_image_classification.ipynb
siglip_lora_sigmoid_202511221028/: training_log.txt
siglip_sigmoid_sigmoid_202511201425_75/: training_log.txt
